SET( SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR} )

SET( SOURCES_0 ${SOURCE_DIR}/types_0.cpp )
SET( SOURCES_1 ${SOURCE_DIR}/types_1.cpp )
SET( SOURCES_2 ${SOURCE_DIR}/types_2.cpp )
SET( SOURCES_3 ${SOURCE_DIR}/types_3.cpp )
SET( SOURCES_4 ${SOURCE_DIR}/types_4.cpp )
SET( SOURCES_5 ${SOURCE_DIR}/types_5.cpp )
SET( SOURCES_6 ${SOURCE_DIR}/types_6.cpp )
SET( SOURCES_6_1 ${SOURCE_DIR}/types_6_1.cpp )
SET( SOURCES_7 ${SOURCE_DIR}/types_7.cpp )
SET( SOURCES_8 ${SOURCE_DIR}/types_8.cpp )
SET( SOURCES_9 ${SOURCE_DIR}/types_9.cpp )
SET( SOURCES_10 ${SOURCE_DIR}/types_10.cpp )

ADD_EXECUTABLE( types_0 ${SOURCES_0} )
ADD_EXECUTABLE( types_1 ${SOURCES_1} )
ADD_EXECUTABLE( types_2 ${SOURCES_2} )
ADD_EXECUTABLE( types_3 ${SOURCES_3} )
ADD_EXECUTABLE( types_4 ${SOURCES_4} )
ADD_EXECUTABLE( types_5 ${SOURCES_5} )
ADD_EXECUTABLE( types_6 ${SOURCES_6} )
ADD_EXECUTABLE( types_6_1 ${SOURCES_6_1} )
ADD_EXECUTABLE( types_7 ${SOURCES_7} )
ADD_EXECUTABLE( types_8 ${SOURCES_8} )
ADD_EXECUTABLE( types_9 ${SOURCES_9} )
ADD_EXECUTABLE( types_10 ${SOURCES_10} )

