SET( SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR} )
SET( SOURCES_1 ${SOURCE_DIR}/arrays_1.cpp )
SET( SOURCES_2 ${SOURCE_DIR}/arrays_2.cpp )
SET( SOURCES_3 ${SOURCE_DIR}/arrays_3.cpp )
SET( SOURCES_4 ${SOURCE_DIR}/arrays_4.cpp )
SET( SOURCES_5 ${SOURCE_DIR}/arrays_5.cpp )
SET( SOURCES_6 ${SOURCE_DIR}/arrays_6.cpp )
SET( SOURCES_7 ${SOURCE_DIR}/arrays_7.cpp )
SET( SOURCES_8 ${SOURCE_DIR}/arrays_8.cpp )
SET( SOURCES_9 ${SOURCE_DIR}/arrays_9.cpp )
SET( SOURCES_10 ${SOURCE_DIR}/arrays_10.cpp )
SET( SOURCES_11 ${SOURCE_DIR}/arrays_11.cpp )
SET( SOURCES_12 ${SOURCE_DIR}/arrays_12.cpp )
SET( SOURCES_13 ${SOURCE_DIR}/arrays_13.cpp )
SET( SOURCES_14 ${SOURCE_DIR}/arrays_14.cpp )
SET( SOURCES_15 ${SOURCE_DIR}/arrays_15.cpp )
SET( SOURCES_16 ${SOURCE_DIR}/arrays_16.cpp )
SET( SOURCES_17 ${SOURCE_DIR}/arrays_17.cpp )
ADD_EXECUTABLE( arrays_1 ${SOURCES_1} )
ADD_EXECUTABLE( arrays_2 ${SOURCES_2} )
ADD_EXECUTABLE( arrays_3 ${SOURCES_3} )
ADD_EXECUTABLE( arrays_4 ${SOURCES_4} )
ADD_EXECUTABLE( arrays_5 ${SOURCES_5} )
ADD_EXECUTABLE( arrays_6 ${SOURCES_6} )
ADD_EXECUTABLE( arrays_7 ${SOURCES_7} )
ADD_EXECUTABLE( arrays_8 ${SOURCES_8} )
ADD_EXECUTABLE( arrays_9 ${SOURCES_9} )
ADD_EXECUTABLE( arrays_10 ${SOURCES_10} )
ADD_EXECUTABLE( arrays_11 ${SOURCES_11} )
ADD_EXECUTABLE( arrays_12 ${SOURCES_12} )
ADD_EXECUTABLE( arrays_13 ${SOURCES_13} )
ADD_EXECUTABLE( arrays_14 ${SOURCES_14} )
ADD_EXECUTABLE( arrays_15 ${SOURCES_15} )
ADD_EXECUTABLE( arrays_16 ${SOURCES_16} )
ADD_EXECUTABLE( arrays_17 ${SOURCES_17} )

ADD_SUBDIRECTORY( solutions )

