SET( SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR} )
SET( SOURCES_1 ${SOURCE_DIR}/functions_1.cpp )
SET( SOURCES_2 ${SOURCE_DIR}/functions_2.cpp )
SET( SOURCES_3 ${SOURCE_DIR}/functions_3.cpp )
SET( SOURCES_4 ${SOURCE_DIR}/functions_4.cpp )
SET( SOURCES_5 ${SOURCE_DIR}/functions_5.cpp )
SET( SOURCES_6 ${SOURCE_DIR}/functions_6.cpp )
SET( SOURCES_7 ${SOURCE_DIR}/functions_7.cpp )
SET( SOURCES_8 ${SOURCE_DIR}/functions_8.cpp )
SET( SOURCES_9 ${SOURCE_DIR}/functions_9.cpp )
SET( SOURCES_10 ${SOURCE_DIR}/functions_10.cpp )
SET( SOURCES_11 ${SOURCE_DIR}/functions_11.cpp )
ADD_EXECUTABLE( functions_1 ${SOURCES_1} )
ADD_EXECUTABLE( functions_2 ${SOURCES_2} )
ADD_EXECUTABLE( functions_3 ${SOURCES_3} )
ADD_EXECUTABLE( functions_4 ${SOURCES_4} )
ADD_EXECUTABLE( functions_5 ${SOURCES_5} )
ADD_EXECUTABLE( functions_6 ${SOURCES_6} )
ADD_EXECUTABLE( functions_7 ${SOURCES_7} )
ADD_EXECUTABLE( functions_8 ${SOURCES_8} )
ADD_EXECUTABLE( functions_9 ${SOURCES_9} )
ADD_EXECUTABLE( functions_10 ${SOURCES_10} )
ADD_EXECUTABLE( functions_11 ${SOURCES_11} )

ADD_SUBDIRECTORY( solutions )

