SET( SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR} )
SET( SOURCES_1 ${SOURCE_DIR}/pointers_1.cpp )
SET( SOURCES_2 ${SOURCE_DIR}/pointers_2.cpp )
SET( SOURCES_3 ${SOURCE_DIR}/pointers_3.cpp )
SET( SOURCES_4 ${SOURCE_DIR}/pointers_4.cpp )
SET( SOURCES_5 ${SOURCE_DIR}/pointers_5.cpp )
SET( SOURCES_6 ${SOURCE_DIR}/pointers_6.cpp )
SET( SOURCES_7 ${SOURCE_DIR}/pointers_7.cpp )
SET( SOURCES_8 ${SOURCE_DIR}/pointers_8.cpp )
ADD_EXECUTABLE( pointers_1 ${SOURCES_1} )
ADD_EXECUTABLE( pointers_2 ${SOURCES_2} )
ADD_EXECUTABLE( pointers_3 ${SOURCES_3} )
ADD_EXECUTABLE( pointers_4 ${SOURCES_4} )
ADD_EXECUTABLE( pointers_5 ${SOURCES_5} )
ADD_EXECUTABLE( pointers_6 ${SOURCES_6} )
ADD_EXECUTABLE( pointers_7 ${SOURCES_7} )
ADD_EXECUTABLE( pointers_8 ${SOURCES_8} )

ADD_SUBDIRECTORY( solutions )

