SET( SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR} )
SET( SOURCES_1 ${SOURCE_DIR}/statements_1.cpp )
SET( SOURCES_2 ${SOURCE_DIR}/statements_2.cpp )
SET( SOURCES_3 ${SOURCE_DIR}/statements_3.cpp )
SET( SOURCES_4 ${SOURCE_DIR}/statements_4.cpp )
SET( SOURCES_5 ${SOURCE_DIR}/statements_5.cpp )
SET( SOURCES_6 ${SOURCE_DIR}/statements_6.cpp )
SET( SOURCES_7 ${SOURCE_DIR}/statements_7.cpp )
SET( SOURCES_8 ${SOURCE_DIR}/statements_8.cpp )
SET( SOURCES_9 ${SOURCE_DIR}/statements_9.cpp )
ADD_EXECUTABLE( statements_1 ${SOURCES_1} )
ADD_EXECUTABLE( statements_2 ${SOURCES_2} )
ADD_EXECUTABLE( statements_3 ${SOURCES_3} )
ADD_EXECUTABLE( statements_4 ${SOURCES_4} )
ADD_EXECUTABLE( statements_5 ${SOURCES_5} )
ADD_EXECUTABLE( statements_6 ${SOURCES_6} )
ADD_EXECUTABLE( statements_7 ${SOURCES_7} )
ADD_EXECUTABLE( statements_8 ${SOURCES_8} )
ADD_EXECUTABLE( statements_9 ${SOURCES_9} )

ADD_SUBDIRECTORY( solutions )

