SET( SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR} )
SET( SOURCES_1 ${SOURCE_DIR}/visibility_scope_1.cpp )
SET( SOURCES_2 ${SOURCE_DIR}/visibility_scope_2.cpp )
SET( SOURCES_3 ${SOURCE_DIR}/visibility_scope_3.cpp )
SET( SOURCES_4 ${SOURCE_DIR}/visibility_scope_4.cpp )
SET( SOURCES_5 ${SOURCE_DIR}/visibility_scope_5.cpp )
SET( SOURCES_6 ${SOURCE_DIR}/visibility_scope_6.cpp )
SET( SOURCES_7 ${SOURCE_DIR}/visibility_scope_7.cpp )
SET( SOURCES_quiz ${SOURCE_DIR}/visibility_scope_quiz.cpp )
ADD_EXECUTABLE( visibility_scope_1 ${SOURCES_1} )
ADD_EXECUTABLE( visibility_scope_2 ${SOURCES_2} )
ADD_EXECUTABLE( visibility_scope_3 ${SOURCES_3} )
ADD_EXECUTABLE( visibility_scope_4 ${SOURCES_4} )
ADD_EXECUTABLE( visibility_scope_5 ${SOURCES_5} )
ADD_EXECUTABLE( visibility_scope_6 ${SOURCES_6} )
ADD_EXECUTABLE( visibility_scope_7 ${SOURCES_7} )
ADD_EXECUTABLE( visibility_scope_quiz ${SOURCES_quiz} )

