SET( SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR} )
SET( SOURCES_0 ${SOURCE_DIR}/binders_0.cpp )
SET( SOURCES_1 ${SOURCE_DIR}/binders_1.cpp )
SET( SOURCES_2 ${SOURCE_DIR}/binders_2.cpp )
ADD_EXECUTABLE( binders_0 ${SOURCES_0} )
ADD_EXECUTABLE( binders_1 ${SOURCES_1} )
ADD_EXECUTABLE( binders_2 ${SOURCES_2} )
