SET( SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR} )
SET( SOURCES_1 ${SOURCE_DIR}/event_listener_1.cpp )
SET( SOURCES_2 ${SOURCE_DIR}/event_listener_2.cpp )
SET( SOURCES_3 ${SOURCE_DIR}/event_listener_3.cpp )
SET( SOURCES_4 ${SOURCE_DIR}/event_listener_4.cpp )
SET( SOURCES_5 ${SOURCE_DIR}/event_listener_5.cpp )
ADD_EXECUTABLE( event_listener_1 ${SOURCES_1} )
ADD_EXECUTABLE( event_listener_2 ${SOURCES_2} )
ADD_EXECUTABLE( event_listener_3 ${SOURCES_3} )
ADD_EXECUTABLE( event_listener_4 ${SOURCES_4} )
ADD_EXECUTABLE( event_listener_5 ${SOURCES_5} )

