SET( SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR} )
SET( SOURCES_0 ${SOURCE_DIR}/threads_0.cpp )
SET( SOURCES_1 ${SOURCE_DIR}/threads_1.cpp )
SET( SOURCES_2 ${SOURCE_DIR}/threads_2.cpp )
SET( SOURCES_3 ${SOURCE_DIR}/threads_3.cpp )
SET( SOURCES_3_1 ${SOURCE_DIR}/threads_3_1.cpp )
SET( SOURCES_4 ${SOURCE_DIR}/threads_4.cpp )
SET( SOURCES_5 ${SOURCE_DIR}/threads_5.cpp )
SET( SOURCES_6 ${SOURCE_DIR}/threads_6.cpp )
SET( SOURCES_7 ${SOURCE_DIR}/threads_7.cpp )
SET( SOURCES_8 ${SOURCE_DIR}/threads_8.cpp )
SET( SOURCES_9 ${SOURCE_DIR}/threads_9.cpp )
ADD_EXECUTABLE( threads_0 ${SOURCES_0} )
ADD_EXECUTABLE( threads_1 ${SOURCES_1} )
ADD_EXECUTABLE( threads_2 ${SOURCES_2} )
ADD_EXECUTABLE( threads_3 ${SOURCES_3} )
ADD_EXECUTABLE( threads_3_1 ${SOURCES_3_1} )
ADD_EXECUTABLE( threads_4 ${SOURCES_4} )
ADD_EXECUTABLE( threads_5 ${SOURCES_5} )
ADD_EXECUTABLE( threads_6 ${SOURCES_6} )
ADD_EXECUTABLE( threads_7 ${SOURCES_7} )
ADD_EXECUTABLE( threads_8 ${SOURCES_8} )
ADD_EXECUTABLE( threads_9 ${SOURCES_9} )

