FIND_LIBRARY( CRYPTO_LIB NAMES crypto )
FIND_LIBRARY( SSL_LIB NAMES ssl )
SET( OPENSSL_LIBS ${CRYPTO_LIB} ${SSL_LIB} )

SET( SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR} )

SET( CLIENT_TARGET secure_client )
SET( CLIENT_SOURCES ${SOURCE_DIR}/secure_client.cpp )
ADD_EXECUTABLE( ${CLIENT_TARGET} ${CLIENT_SOURCES} )
TARGET_LINK_LIBRARIES( ${CLIENT_TARGET} ${OPENSSL_LIBS} )

SET( SERVER_TARGET secure_server )
SET( SERVER_SOURCES ${SOURCE_DIR}/secure_server.cpp )
ADD_EXECUTABLE( ${SERVER_TARGET} ${SERVER_SOURCES} )
TARGET_LINK_LIBRARIES( ${SERVER_TARGET} ${OPENSSL_LIBS} )

