FIND_LIBRARY( CRYPTO_LIB NAMES crypto )
FIND_LIBRARY( SSL_LIB NAMES ssl )
SET( OPENSSL_LIBS ${CRYPTO_LIB} ${SSL_LIB} )

SET( SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR} )

SET( CLIENT_TARGET secure_client )
SET( CLIENT_SOURCES ${SOURCE_DIR}/secure_client.cpp )
ADD_EXECUTABLE( ${CLIENT_TARGET} ${CLIENT_SOURCES} )
TARGET_LINK_LIBRARIES( ${CLIENT_TARGET} ${OPENSSL_LIBS} )

SET( SERVER_TARGET secure_server )
SET( SERVER_SOURCES ${SOURCE_DIR}/secure_server.cpp )
ADD_EXECUTABLE( ${SERVER_TARGET} ${SERVER_SOURCES} )
TARGET_LINK_LIBRARIES( ${SERVER_TARGET} ${OPENSSL_LIBS} )

SET( SSLCONNECT_TARGET sslconnect )
SET( SSLCONNECT_SOURCES ${SOURCE_DIR}/sslconnect.c )
ADD_EXECUTABLE( ${SSLCONNECT_TARGET} ${SSLCONNECT_SOURCES} )
TARGET_LINK_LIBRARIES( ${SSLCONNECT_TARGET} ${OPENSSL_LIBS} )

SET( AESCRYPTING_TARGET aes_crypting )
SET( AESCRYPTING_SOURCES ${SOURCE_DIR}/aes_crypting.cpp )
ADD_EXECUTABLE( ${AESCRYPTING_TARGET} ${AESCRYPTING_SOURCES} )
TARGET_LINK_LIBRARIES( ${AESCRYPTING_TARGET} ${OPENSSL_LIBS} )

SET( RSAEVPCRYPTING_TARGET rsa_envelope_crypting )
SET( RSAEVPCRYPTING_SOURCES ${SOURCE_DIR}/rsa_envelope_crypting.cpp )
ADD_EXECUTABLE( ${RSAEVPCRYPTING_TARGET} ${RSAEVPCRYPTING_SOURCES} )
TARGET_LINK_LIBRARIES( ${RSAEVPCRYPTING_TARGET} ${OPENSSL_LIBS} )

