SET( SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR} )
SET( SOURCES_0 ${SOURCE_DIR}/server_0.cpp )
SET( SOURCES_1 ${SOURCE_DIR}/server_1.cpp )
SET( SOURCES_2 ${SOURCE_DIR}/server_2.cpp )
ADD_EXECUTABLE( server_0 ${SOURCES_0} )
ADD_EXECUTABLE( server_1 ${SOURCES_1} )
ADD_EXECUTABLE( server_2 ${SOURCES_2} )
TARGET_LINK_LIBRARIES( server_2 protocol )

